--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,7 @@
 # Flask Configuration
-FLASK_APP=app
-FLASK_ENV=development
 SECRET_KEY=change-this-secret-key
+DEBUG=false
 
-# Open-Meteo (no API key needed, but base URL configurable)
+# Weather API
 WEATHER_API_URL=https://api.open-meteo.com/v1
+WEATHER_API_TIMEOUT=10
