--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,9 @@ requires-python = ">=3.11"
 dependencies = [
     "flask>=3.1.2",
     "flask-wtf>=1.2.2",
+    "httpx>=0.28.1",
+    "pydantic-settings>=2.12.0",
     "python-dotenv>=1.2.1",
-    "requests>=2.32.5",
 ]
 
 [dependency-groups]
@@ -16,7 +17,6 @@ dev = [
     "mypy>=1.19.1",
     "pytest>=9.0.2",
     "ruff>=0.14.13",
-    "types-requests>=2.32.0",
     "types-wtforms>=3.2.1",
 ]
 
