--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,10 @@ DEBUG=false
 # Weather API
 WEATHER_API_URL=https://api.open-meteo.com/v1
 WEATHER_API_TIMEOUT=10
+
+# Database
+PGHOST=localhost
+PGPORT=5432
+PGUSER=postgres
+PGPASSWORD=postgres
+PGDATABASE=czech_weather
