--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,7 @@ dependencies = [
     "alembic>=1.18.1",
     "flask>=3.1.2",
     "flask-wtf>=1.2.2",
+    "gunicorn>=23.0.0",
     "httpx>=0.28.1",
     "psycopg[binary]>=3.3.2",
     "pydantic-settings>=2.12.0",
