--- a/compose.yml
+++ b/compose.yml
@@ -17,6 +17,7 @@ services:
       - db_data:/var/lib/postgresql/data
 
   app:
+    image: ${APP_IMAGE:-czech-weather:local}
     build: .
     container_name: czech-weather-app
     environment:
